--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,5 @@
 
 
-/* 
-
-.carousel { 
-  position: relative;
-  white-space: nowrap;
-  overflow: hidden;
-  user-select: none;
-}
 
 
 .inner {
@@ -15,10 +7,6 @@
   transform: matrix(1,0,0,1,0,0);
   transition: transform 0.4s ease;
 }
-
-.tile {
-  border: 2px solid slateblue;
-} */
 
 .control {
   position: absolute;
@@ -42,4 +30,12 @@
 
 .right {
   right: 0;
+}
+
+.cover {
+  background-image: url('http://via.placeholder.com/350x150');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100px;
 }
