--- a/src/index.css
+++ b/src/index.css
@@ -2,40 +2,30 @@
 
 
 
-.inner {
-  display: inline-block;
-  transform: matrix(1,0,0,1,0,0);
-  transition: transform 0.4s ease;
-}
-
-.control {
-  position: absolute;
-  top: 50%;
-  transform: translate(0, -50%);
-  z-index: 10;
-  background-color: darkslategray;
-  color: white;
-  font-weight: bold;
-  border-radius: 50%;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 10px;
+.carousel {
+  position: relative;
+  overflow: hidden;
   user-select: none;
 }
 
-.left {
-  left: 0;
+.inner {
+  display: inline-flex;
+  transform: matrix(1,0,0,1,0,0);
+  transition: transform 0.5s ease;
+  vertical-align: middle;
 }
 
-.right {
-  right: 0;
+.slide {
+  box-sizing: border-box;
+  display: inline-block;
+  overflow: hidden;  
+  border: 1px solid salmon;
+  white-space: normal;
 }
 
-.cover {
-  background-image: url('http://via.placeholder.com/350x150');
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 100px;
+@media(max-width: 500px) {
+  .slide {
+    height: 100px;
+  }
 }
+
