--- a/src/index.css
+++ b/src/index.css
@@ -2,30 +2,26 @@
 
 
 
-.carousel {
+.outer {
   position: relative;
   overflow: hidden;
   user-select: none;
 }
 
 .inner {
-  display: inline-flex;
+  display: inline-block;
+  white-space: nowrap;
+  position: relative;
+  /* flex-wrap: nowrap; */
   transform: matrix(1,0,0,1,0,0);
-  transition: transform 0.5s ease;
-  vertical-align: middle;
+  /* transition: all 0.5s ease; */
 }
 
-.slide {
+/* .slide {
   box-sizing: border-box;
   display: inline-block;
   overflow: hidden;  
   border: 1px solid salmon;
-  white-space: normal;
-}
+} */
 
-@media(max-width: 500px) {
-  .slide {
-    height: 100px;
-  }
-}
 
